# docker

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
cars/: admin.py  models.py  serializer.py  urls.py  views.py
cars/migrations/: 0001_initial.py
project/: settings.py  urls.py
